# butterfly

./: .gitignore  CMakeLists.txt  README.doc  README.txt
buildVS2013/: buildVS2013.sln
buildVS2013/image_filter/: image_filter.vcxproj
buildVS2013/image_filter_test/: image_filter_test.vcxproj
cmake/: CompileHelper.cmake
projects/: CMakeLists.txt
projects/image_filter/: CMakeLists.txt  main.cpp  mean_filter.cpp  mean_filter.h  median_filter.cpp  median_filter.h
projects/image_filter_test/: CMakeLists.txt  main.cpp
test/: time_performance_test.bat
